initial lecture 5 commit

--- a/files/test.html
+++ b/files/test.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Page Title</title>
+        <meta charset="utf-8">
+        <title>D3 Page Template</title>
+        <script type="text/javascript" src="d3/d3.v3.js"></script>
     </head>
     <body>
-        <h1>Page Title</h1>
-        <p>This is a really interesting paragraph.</p>
+        <script type="text/javascript">
+            // Your beautiful D3 code will go here
+        </script>
     </body>
 </html>
